base(vdcpreview)html css

--- a/src/app/videochat/vdc-preview/vdc-preview.component.html
+++ b/src/app/videochat/vdc-preview/vdc-preview.component.html
@@ -1,16 +1,25 @@
 <div class="vdcpreview">
-    <div class="vdcpreview__txthelper">Cita con el Doctor XY, a las 10:00 A.M</div>
-    <div class="vdcpreview__container">
-        <div>
-            <button>PEGASI LOGO</button>
-            <span>You're about to join a video meeting whry.com/pegasi_dev</span>
-            <div class="preview_usercam">
+
+    <div class="vdcpreview__txtHelper">CITA CON EL DOCTOR XXXX, a las 10:00 A.M</div>
+    
+    <div class="vdcpreview__previewContainer">
+
+        <div class="previewContainer__meeting">
+
+            <span class="vdcpreview__txtHelper">PEGASI LOGO</span>
+            <br>
+            <br>
+            <span class="meeting__joinText">You're about to join a video meeting whry.com/pegasi_dev</span>
+
+            <div class="meeting__userCam">
                 <img src="https://ak3.picdn.net/shutterstock/videos/24953183/thumb/8.jpg">
             </div>
+
         </div>
         <hr>
-        <div class="preview_joiner">
+        <div class="preview__joiner">
             <button>Deseo Entrar</button>
         </div>
+
     </div>
 </div>
