--- a/src/app/videochat/vdc-preview/vdc-preview.component.html
+++ b/src/app/videochat/vdc-preview/vdc-preview.component.html
@@ -1,23 +1,26 @@
-<div class="vdcpreview">
+<div>
 
-    <div class="vdcpreview__txtHelper">CITA CON EL DOCTOR XXXX, a las 10:00 A.M</div>
+</div>
+<div class="vdcpreview__txtHelper">CITA CON EL DOCTOR XXXX, a las 10:00 A.M</div>
+<div class="vdcpreview__container">
+
     
     <div class="vdcpreview__previewContainer">
 
         <div class="previewContainer__meeting">
 
-            <span class="vdcpreview__txtHelper">PEGASI LOGO</span>
+            <div class="vdcpreview__txtHelper">
+                <span>LOGO</span>   
+            </div>
             <br>
-            <br>
-            <span class="meeting__joinText">You're about to join a video meeting whry.com/pegasi_dev</span>
+            <span class="meeting__joinText">You're about to join a video meeting <a href="#">xxxxx-yy.com/pegassi_devs</a></span>
 
             <div class="meeting__userCam">
                 <img src="https://ak3.picdn.net/shutterstock/videos/24953183/thumb/8.jpg">
             </div>
 
         </div>
-        <hr>
-        <div class="preview__joiner">
+        <div class="preview__footer">
             <button>Deseo Entrar</button>
         </div>
 
