--- a/src/app/videochat/vdc-preview/vdc-preview.component.scss
+++ b/src/app/videochat/vdc-preview/vdc-preview.component.scss
@@ -1,45 +1,65 @@
-.vdcpreview{
+
+
+
+.vdcpreview__container{
+    width: 500px;
     text-align: center;
     margin: auto;
-    width: 600px;
+    img{
+        width: 100%;
+        height: 100%;
+    }
     .vdcpreview__previewContainer{
-        border:1px solid #ddd;
         border-radius: 10px;
         margin: 30px 0px 0px 0px;
         background-color: white;
-        box-shadow: 1px 1px 7px black;
         .previewContainer__meeting{
             margin-top: 5%;
             border-radius: 10px;
-            .meeting__joinText{
-                margin-top: 5%;
-            }
             .meeting__userCam{
                 position: relative;
-                img{
-                    width: 100%;
-                    border-radius: 20px;
-                }
             }
             .meeting__userCam::before{
                 content: "Join with cam off";
                 background-color: #0000008f;
                 color: white;
-                padding: 1% 30%;
-                border-radius: 5px;
-                top: 50px;
                 position: relative;
-                font-size: 1.5em;
+                bottom: -2em;
+                display: block;
+                margin: 0px 1em;
+                padding: 0.3em;
+                border-radius: 3px;
+                font-family: monospace;
             }
         }
     }
-    .vdcpreview__txtHelper{
-        background-color: #0080bb;
+    .preview__footer{
         padding: 10px;
-        color:white;
-        border: 2px solid black;
+        button{
+            border: #ddd;
+            padding: 5px 20px;
+            color: white;
+            background: #0077c8;
+            cursor: pointer;
+            transition-duration: 0.2s;
+        }
+        button:hover{
+            background: white;
+            color: #0077c8;
+            border: 1px solid #0077c8;
+        }
     }
-    .preview__joiner{
-        padding: 10px;
+}
+
+
+.vdcpreview__txtHelper{
+    background-color: #0077c8;
+    padding: 10px;
+    color: white;
+    display: list-item;
+    overflow: hidden;
+    border-radius: 5px 5px 0px 0px;
+    .txtHelper__logo{
+        width: 150px;
     }
 }
