fix scss classnames

--- a/src/app/videochat/vdc-preview/vdc-preview.component.html
+++ b/src/app/videochat/vdc-preview/vdc-preview.component.html
@@ -1,21 +1,19 @@
 
 <div class="vdcpreview__txtHelper">CITA CON EL DOCTOR XXXX, a las 10:00 A.M</div>
 
-<div class="vdcpreview__container">
-    <div class="vdcpreview__previewContainer">
-        <div class="previewContainer__meeting">
-            <div class="vdcpreview__txtHelper">
-                <span>LOGO</span>   
-            </div>
-            <br>
-            <span class="meeting__joinText">You're about to join a video meeting <a href="#">xxxxx-yy.com/pegassi_devs</a></span>
-
-            <div class="meeting__userCam">
-                <img src="https://ak3.picdn.net/shutterstock/videos/24953183/thumb/8.jpg">
+<div class="vdcpreview__card">
+    <div class="card">
+        <div class="card__header">
+            <img src="https://3.bp.blogspot.com/-xzRtweSMii8/VrCtynTUz_I/AAAAAAAAFRM/yXYTMlqCRZ8/s1600/oms-logo-zika.png" alt=""> 
+        </div>
+        <div class="card__body">
+            <span class="body__title">You're about to join a video meeting <a href="#">whereby.com/pegassi_devs</a></span>
+            <div class="body__contain">
+                <img src="https://s23527.pcdn.co/wp-content/uploads/2018/01/After-DIY-Webcam-Beauty-Dish.jpg.optimal.jpg">
             </div>
         </div>
-        <div class="preview__footer">
-            <button>Deseo Entrar</button>
+        <div class="card__footer">
+            <button>SÍ, DESEO ENTRAR</button>
         </div>
     </div>
 </div>
