--- a/src/app/videochat/vdc-preview/vdc-preview.component.scss
+++ b/src/app/videochat/vdc-preview/vdc-preview.component.scss
@@ -1,7 +1,7 @@
 
 
 
-.vdcpreview__container{
+.vdcpreview__card{
     width: 500px;
     text-align: center;
     margin: auto;
@@ -9,17 +9,23 @@
         width: 100%;
         height: 100%;
     }
-    .vdcpreview__previewContainer{
+    .card{
         border-radius: 10px;
         margin: 30px 0px 0px 0px;
         background-color: white;
-        .previewContainer__meeting{
+        .card__header{
+            img{
+                width: 100px;
+            }
+        }
+        .card__body{
             margin-top: 5%;
             border-radius: 10px;
-            .meeting__userCam{
+        
+            .body__contain{
                 position: relative;
             }
-            .meeting__userCam::before{
+            .body__contain::before{
                 content: "Join with cam off";
                 background-color: #0000008f;
                 color: white;
@@ -32,25 +38,24 @@
                 font-family: monospace;
             }
         }
-    }
-    .preview__footer{
-        padding: 10px;
-        button{
-            border: #ddd;
-            padding: 5px 20px;
-            color: white;
-            background: #0077c8;
-            cursor: pointer;
-            transition-duration: 0.2s;
+        .card__footer{
+            padding: 10px;
+            button{
+                padding: 5px 20px;
+                color: #0077c8;
+                border: none;
+                background-color: white;
+                border-bottom: 1px solid #0077c8;
+                cursor: pointer;
+                transition-duration: 0.2s;
+            }
+            button:hover{
+                border-bottom: 3px solid #0077c8;
+            }
         }
-        button:hover{
-            background: white;
-            color: #0077c8;
-            border: 1px solid #0077c8;
-        }
+        
     }
 }
-
 
 .vdcpreview__txtHelper{
     background-color: #0077c8;
@@ -59,7 +64,4 @@
     display: list-item;
     overflow: hidden;
     border-radius: 5px 5px 0px 0px;
-    .txtHelper__logo{
-        width: 150px;
-    }
 }
