--- a/src/app/videochat/vdc-preview/vdc-preview.component.html
+++ b/src/app/videochat/vdc-preview/vdc-preview.component.html
@@ -1,5 +1,5 @@
 
-<div class="vdcpreview__txtHelper">CITA CON EL DOCTOR XXXX, a las 10:00 A.M</div>
+<div class="vdcpreview__advisory">CITA CON EL DOCTOR XXXX, a las 10:00 A.M</div>
 
 <div class="vdcpreview__card">
     <div class="card">
