--- a/src/app/videochat/vdc-preview/vdc-preview.component.scss
+++ b/src/app/videochat/vdc-preview/vdc-preview.component.scss
@@ -57,7 +57,7 @@
     }
 }
 
-.vdcpreview__txtHelper{
+.vdcpreview__advisory{
     background-color: #0077c8;
     padding: 10px;
     color: white;
