--- a/src/app/videochat/vdc-preview/vdc-preview.component.scss
+++ b/src/app/videochat/vdc-preview/vdc-preview.component.scss
@@ -2,9 +2,9 @@
 
 
 .vdcpreview__card{
-    width: 500px;
     text-align: center;
     margin: auto;
+    width: 21em;
     img{
         width: 100%;
         height: 100%;
