feat gif vdcpreview

--- a/src/app/videochat/vdc-preview/vdc-preview.component.html
+++ b/src/app/videochat/vdc-preview/vdc-preview.component.html
@@ -9,7 +9,7 @@
         <div class="card__body">
             <span class="body__title">You're about to join a video meeting <a href="#">whereby.com/pegassi_devs</a></span>
             <div class="body__contain">
-                <img src="https://s23527.pcdn.co/wp-content/uploads/2018/01/After-DIY-Webcam-Beauty-Dish.jpg.optimal.jpg">
+                <img src="https://i.imgur.com/Yratisf.gif?noredirect">
             </div>
         </div>
         <div class="card__footer">
