fix size webcam

--- a/src/app/videochat/vdc-preview/vdc-preview.component.scss
+++ b/src/app/videochat/vdc-preview/vdc-preview.component.scss
@@ -3,7 +3,7 @@
 
 .vdcpreview__card{
     text-align: center;
-    margin: auto;
+    margin: 0% 20%;
     img{
         width: 100%;
         height: 100%;
