base vdc-home-room

--- a/src/app/videochat/vdc-home-room/vdc-home-room.component.html
+++ b/src/app/videochat/vdc-home-room/vdc-home-room.component.html
@@ -1,1 +1,31 @@
-<p>vdc-home-room works!</p>
+<div class="vdchomeroom__header">
+    <div class="header__logo" >
+        <img src="https://3.bp.blogspot.com/-xzRtweSMii8/VrCtynTUz_I/AAAAAAAAFRM/yXYTMlqCRZ8/s1600/oms-logo-zika.png" alt=""> 
+    </div>
+    <div class="header__date">
+        <span>
+            Consulta 10.00
+        </span>
+    </div>
+    <div class="header__register" >
+        <button>
+            ABRIR REGISTRO CLÍNICO
+        </button>
+    </div>
+</div>
+
+
+<div class="vdchomeroom__body">
+
+    <div class="body__videoChat">
+
+        <img src="https://i.makeagif.com/media/12-02-2015/JOiME2.gif" alt="" >
+
+    </div>
+    <div>
+        chat
+    </div>
+
+
+
+</div>
