--- a/src/app/videochat/vdc-home-room/vdc-home-room.component.scss
+++ b/src/app/videochat/vdc-home-room/vdc-home-room.component.scss
@@ -25,6 +25,7 @@
             padding: 10px;
             transition-duration: 0.2s;
             cursor: pointer;
+            outline: none;
         }
         button:hover{
             border-bottom: 3px solid greenyellow;
@@ -33,15 +34,15 @@
 }
 .vdchomeroom__body{
     display: grid;
-    grid-template-columns: 80% 20%;
+    grid-template-columns: 70% 30%;
     padding: 2em;
-    .body__videoChat{
+    .body__video{
         position: relative;
         img{
             width: 100%;
         }
     }
-    .body__videoChat::before{
+    .body__video::before{
         content: "PACIENTE: CAROLINA GONZALEZ";
         position: absolute;
         bottom: 1em;
@@ -52,4 +53,110 @@
         padding: 0.5em;
         border-radius: 0px 3px 3px 0px;
     }
+    .body__chat{
+        position: relative;
+        background-color: whitesmoke;
+        .chat__title{
+            text-align: center;
+            background: #0077c8;
+            padding: 10px;
+            color: white;
+        }
+        .chat__input{
+            background-color: white;
+            display: grid;
+            grid-template-columns: auto auto auto;
+            position: absolute;
+            bottom: 0px;
+            width: 100%;
+            input{
+                width: 100%;
+            }
+            button{
+                width: -webkit-fill-available;
+            }
+        }
+        .chat__conversation {
+            box-shadow: inset 0 10px 10px -10px #000000;
+            .conversation__container {
+                position: relative;
+                z-index: 0;
+            }
+            .conversation__container {
+                .container__messages{
+                    padding: 0 16px;
+                    margin-bottom: 5px;
+                }
+                .container__messages:after {
+                    content: "";
+                    display: table;
+                    clear: both;
+                }
+            }
+        }
+    }
 }
+  
+  
+  
+  /* Conversation */
+  
+  
+  /* Messages */
+  
+  .message {
+    color: #000;
+    clear: both;
+    line-height: 18px;
+    font-size: 15px;
+    padding: 8px;
+    position: relative;
+    margin: 8px 0;
+    max-width: 85%;
+    word-wrap: break-word;
+    z-index: -1;
+  }
+  
+  .message:after {
+    position: absolute;
+    content: "";
+    width: 0;
+    height: 0;
+    border-style: solid;
+  }
+  
+  
+  .message:first-child {
+    margin: 16px 0 8px;
+  }
+  
+  .message__received {
+    background: #fff;
+    border-radius: 0px 5px 5px 5px;
+    float: left;
+  }
+  
+  .message__received .metadata {
+    padding: 0 0 0 16px;
+  }
+  
+  .message__received:after {
+    border-width: 0px 10px 10px 0;
+    border-color: transparent #fff transparent transparent;
+    top: 0;
+    left: -10px;
+  }
+  
+  .message__sent {
+    background: #e1ffc7;
+    border-radius: 5px 0px 5px 5px;
+    float: right;
+  }
+  
+  .message__sent:after {
+    border-width: 0px 0 10px 10px;
+    border-color: transparent transparent transparent #e1ffc7;
+    top: 0;
+    right: -10px;
+  }
+  
