--- a/src/app/videochat/vdc-home-room/vdc-home-room.component.html
+++ b/src/app/videochat/vdc-home-room/vdc-home-room.component.html
@@ -28,8 +28,11 @@
             <span>CHAT</span>
         </div>
         <div class="chat__conversation">
-            <div class="conversation__container">
-                <div class="container__messages">
+            <div class="conversation__containerMessages">
+                <div class="containerMessages__time">
+                    12:00
+                </div>
+                <div class="containerMessages__messages">
                     <div class="message message__sent">
                         What happened last night?
                     </div>
@@ -48,13 +51,17 @@
         <div class="chat__input">
             <div>
                 <input type="file" id="selectedFile" style="display: none;" />
-                <input type="button" value="Browse..." onclick="document.getElementById('selectedFile').click();" />
+                <button type="button" value="Browse..." onclick="document.getElementById('selectedFile').click();" >
+                    <i class="fas fa-paperclip"></i>
+                </button>
             </div>
             <div>
-                <input type="text">
+                <input type="text" placeholder="Send a chat message...">
             </div>
             <div>
-                <button>Send</button>
+                <button>
+                    <i class="fa fa-paper-plane" aria-hidden="true"></i>
+                </button>
             </div>
         </div>
     </div>
