--- a/src/app/videochat/vdc-home-room/vdc-home-room.component.scss
+++ b/src/app/videochat/vdc-home-room/vdc-home-room.component.scss
@@ -61,6 +61,8 @@
             background: #0077c8;
             padding: 10px;
             color: white;
+            box-shadow: 0px 2px 6px -2px black;
+            border-radius: 0px 0px 10px 10px;
         }
         .chat__input{
             background-color: white;
@@ -71,26 +73,40 @@
             width: 100%;
             input{
                 width: 100%;
+                border: none;
+                outline: none;
+                font-size: 1.1em;
             }
             button{
                 width: -webkit-fill-available;
+                border: none;
+                background: none;
+                cursor: pointer;
+                transition-duration: 0.2s;
+                border-bottom: 3px solid white;
+            }
+            button:hover{
+                border-bottom: 3px solid #0077c8;
+                color: #0077c8;
             }
         }
         .chat__conversation {
-            box-shadow: inset 0 10px 10px -10px #000000;
-            .conversation__container {
+            .conversation__containerMessages {
                 position: relative;
                 z-index: 0;
-            }
-            .conversation__container {
-                .container__messages{
+                .containerMessages__messages{
                     padding: 0 16px;
                     margin-bottom: 5px;
                 }
-                .container__messages:after {
+                .containerMessages__messages:after {
                     content: "";
                     display: table;
                     clear: both;
+                }
+                .containerMessages__time{
+                    text-align: center;
+                    margin: 20px;
+                    color: #929292;
                 }
             }
         }
