fix body margin mediaquery

--- a/src/app/videochat/vdc-home-room/vdc-home-room.component.html
+++ b/src/app/videochat/vdc-home-room/vdc-home-room.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class="header__date">
         <span>
-            Consulta 10.00
+            Consulta: 10:00 a.m
         </span>
     </div>
     <div class="header__register">
