--- a/src/app/videochat/vdc-home-room/vdc-home-room.component.scss
+++ b/src/app/videochat/vdc-home-room/vdc-home-room.component.scss
@@ -10,7 +10,10 @@
         }
         text-align: left;
         img{
-            width: 3em;
+            @media screen and (max-width: 600px) {
+                width: 7em;
+            }
+            width: 3.5em;
         }
     }
     .header__date{
