--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 body{
     font-family: sans-serif;
+    @media screen and (max-width: 600px) {
+        margin: 0px;
+    }
 }
