fix(homeroom)indent scss

--- a/src/app/videochat/vdc-home-room/vdc-home-room.component.html
+++ b/src/app/videochat/vdc-home-room/vdc-home-room.component.html
@@ -1,7 +1,6 @@
 <div class="vdchomeroom__header">
     <div class="header__logo">
-        <img src="https://3.bp.blogspot.com/-xzRtweSMii8/VrCtynTUz_I/AAAAAAAAFRM/yXYTMlqCRZ8/s1600/oms-logo-zika.png"
-            alt="">
+        <img src="../../../assets/logo.png" alt="">
     </div>
     <div class="header__date">
         <span>
