--- a/src/app/videochat/vdc-home-room/vdc-home-room.component.scss
+++ b/src/app/videochat/vdc-home-room/vdc-home-room.component.scss
@@ -69,12 +69,12 @@
         position: absolute;
         font-size: 0.8em;
         bottom: 1em;
-        background: #0077c8;
-        color: white;
-        border: 1px solid white;
+        background: lightseagreen;
+        color: black;
+        border: 1px solid #0077c8;
         border-left: none;
         padding: 0.5em;
-        border-radius: 0px 3px 3px 0px;
+        font-family: cursive;
     }
     .body__chat{
         position: relative;
