--- a/src/app/videochat/vdc-home-room/vdc-home-room.component.scss
+++ b/src/app/videochat/vdc-home-room/vdc-home-room.component.scss
@@ -86,114 +86,16 @@
             padding: 10px;
             color: white;
         }
-        .chat__input{
-            @media screen and (max-width: 950px) {
-                position: relative;
-            }
-            position: absolute;
-            display: grid;
-            grid-template-columns: auto auto auto;
-            border-top: 1px solid #ddd;
-            background-color: white;
-            bottom: 0px;
-            width: 100%;
-            input{
-                width: 100%;
-                border: none;
-                outline: none;
-                font-size: 1em;
-            }
-            button{
-                i{
-                    font-size: 1.3em;
-                }
-                width: -webkit-fill-available;
-                border: none;
-                background: none;
-                cursor: pointer;
-                transition-duration: 0.2s;
-                border-bottom: 3px solid white;
-            }
-            button:hover{
-                border-bottom: 3px solid #0077c8;
-                color: #0077c8;
-            }
-        }
         .chat__conversation{
-            .conversation__containerMessages {
-                position: relative;
-                z-index: 0;
-                .containerMessages__messages{
-                    padding: 0 16px;
-                    margin-bottom: 5px;
-                    .message {
-                        color: #000;
-                        clear: both;
-                        line-height: 18px;
-                        font-size: 15px;
-                        padding: 8px;
-                        position: relative;
-                        margin: 8px 0;
-                        max-width: 85%;
-                        word-wrap: break-word;
-                        z-index: -1;
-                      }
-                      
-                      .message:after {
-                        position: absolute;
-                        content: "";
-                        width: 0;
-                        height: 0;
-                        border-style: solid;
-                      }
-                      
-                      
-                      .message:first-child {
-                        margin: 16px 0 8px;
-                      }
-                      
-                      .message__received {
-                        background: #fff;
-                        border-radius: 0px 5px 5px 5px;
-                        float: left;
-                      }
-                      
-                      .message__received .metadata {
-                        padding: 0 0 0 16px;
-                      }
-                      
-                      .message__received:after {
-                        border-width: 0px 10px 10px 0;
-                        border-color: transparent #fff transparent transparent;
-                        top: 0;
-                        left: -10px;
-                      }
-                      
-                      .message__sent {
-                        background: #e1ffc7;
-                        border-radius: 5px 0px 5px 5px;
-                        float: right;
-                      }
-                      
-                      .message__sent:after {
-                        border-width: 0px 0 10px 10px;
-                        border-color: transparent transparent transparent #e1ffc7;
-                        top: 0;
-                        right: -10px;
-                      }
-                }
-                .containerMessages__messages:after {
-                    content: "";
-                    display: table;
-                    clear: both;
-                }
-                .containerMessages__time{
-                    text-align: center;
-                    margin: 20px;
-                    color: #929292;
-                }
-            }
+            height: 100%;
+            width: 100%;
+           iframe{
+               .chats{
+                display: none !important;
+               }
+            width: 100%;
+            height: 100%;
+           }
         }
     }
 }
-  
