--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 body{
+    background-color: #0d8276;
     font-family: sans-serif;
     margin: 0px;
 }
