--- a/src/app/videochat/patient-pin/patient-pin.component.html
+++ b/src/app/videochat/patient-pin/patient-pin.component.html
@@ -1,17 +1,17 @@
 <div class="window">
-    <div>
-        <div>
-            LOGO
+    <div class="window__header">
+        <div class="header__logo">
+            <img src="../../../assets/logo.png" alt="">
         </div>
-        <div>
+        <div class="header__motto">
             <div>Toda la Salud</div>
             <div>En una plataforma</div>
         </div>  
     </div>
-    <div>
-        
+    <div class="window__body">
+        <app-inputpin></app-inputpin>
     </div>
-    <div>
-
+    <div class="window__footer">
+       <h4> Por favor introduzca el pin de la sala del practicante</h4>
     </div>
 </div>
